[tool.poetry]
name = "image-converter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "scripts/*" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pysimplegui = "=4.70.1"
wand = "^0.6.13"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[tool.poetry.scripts]
build = "scripts.build:install"
